--- a/specs/usage_manifest.json
+++ b/specs/usage_manifest.json
@@ -1,84 +1,96 @@
 {
   "final_prompt": "Build a Spotify-like frontend using React.\nBuild tool: Vite\nStyling: Tailwind CSS\nState management: React Context\nNo backend.",
-  "generated_at": "2026-02-03T18:07:10.309611Z",
+  "generated_at": "2026-02-03T18:24:15.900179Z",
   "records": [
     {
-      "path": "project_root/frontend/framework/react",
+      "path": "project_root/frontend/framework/react/build_tool/vite/src",
+      "decision": "KEEP",
+      "reason": "This folder contains the source code of the React application which is a crucial part of the project requirements.",
+      "model": "ollama"
+    },
+    {
+      "path": "project_root/frontend/framework/react/build_tool/webpack",
       "decision": "PRUNE",
-      "reason": "Condition not satisfied: Frontend framework is React",
-      "model": "mistral"
+      "reason": "The project requirement states to use Vite as the build tool, which this folder does not comply with.",
+      "model": "ollama"
     },
     {
       "path": "project_root/frontend/framework/vue",
       "decision": "PRUNE",
-      "reason": "Condition not satisfied: Frontend framework is Vue",
-      "model": "mistral"
+      "reason": "The project requirement specifies React as the frontend technology, not Vue.js.",
+      "model": "ollama"
     },
     {
-      "path": "project_root/frontend/routing/react_router",
-      "decision": "PRUNE",
-      "reason": "Condition not satisfied: Routing uses React Router",
-      "model": "mistral"
+      "path": "project_root/frontend/routing/react_router/routes",
+      "decision": "KEEP",
+      "reason": "The 'routes' folder is necessary for defining and managing the application routes in a React project, as stated in the project requirements. It contains files like AppRoutes.tsx for defining routes and ProtectedRoute.tsx for handling route-level authentication which are crucial components for a Spotify-like frontend.",
+      "model": "ollama"
     },
     {
       "path": "project_root/frontend/routing/file_based",
-      "decision": "PRUNE",
-      "reason": "Condition not satisfied: Routing uses file-based strategy",
-      "model": "mistral"
+      "decision": "KEEP",
+      "reason": "File-based routing is a common approach in React projects, especially for smaller applications where dynamic routing isn't necessary. Keeping this folder allows for the creation of individual pages and routes by defining files.",
+      "model": "ollama"
     },
     {
-      "path": "project_root/frontend/state_management/redux",
+      "path": "project_root/frontend/state_management/redux/store",
       "decision": "PRUNE",
-      "reason": "Condition not satisfied: State management is Redux",
-      "model": "mistral"
+      "reason": "The project requirements state the use of React Context for state management, not Redux. This folder is unnecessary as it contains files related to Redux which are not specified in the project's stated tech stack.",
+      "model": "ollama"
     },
     {
       "path": "project_root/frontend/state_management/zustand",
-      "decision": "PRUNE",
-      "reason": "Condition not satisfied: State management is Zustand",
-      "model": "mistral"
+      "decision": "KEEP",
+      "reason": "The project requirement states no specific state management library, but provides React Context as a possibility. However, Zustand is a popular React-focused state management library that provides a simpler API than Redux or MobX with similar capabilities. Keeping this folder allows developers to opt for Zustand if they find it more suitable.",
+      "model": "ollama"
     },
     {
       "path": "project_root/frontend/state_management/context_only",
-      "decision": "PRUNE",
-      "reason": "Condition not satisfied: Only React Context is used",
-      "model": "mistral"
+      "decision": "KEEP",
+      "reason": "This folder follows the project requirement of using React Context for state management.",
+      "model": "ollama"
     },
     {
-      "path": "project_root/frontend/styling/css_modules",
+      "path": "project_root/frontend/styling/css_modules/styles",
       "decision": "PRUNE",
-      "reason": "Condition not satisfied: Styling uses CSS Modules",
-      "model": "mistral"
+      "reason": "Tailwind CSS is being used for styling, and this folder contains CSS modules which contradicts the project requirement of using Tailwind CSS.",
+      "model": "ollama"
     },
     {
       "path": "project_root/frontend/styling/tailwind",
-      "decision": "PRUNE",
-      "reason": "Condition not satisfied: Styling uses Tailwind CSS",
-      "model": "mistral"
+      "decision": "KEEP",
+      "reason": "The folder contains Tailwind CSS, which is the specified styling library for this project.",
+      "model": "ollama"
     },
     {
-      "path": "project_root/backend/runtime/node",
+      "path": "project_root/backend/runtime/node/framework/express/src",
       "decision": "PRUNE",
-      "reason": "Condition not satisfied: Backend runtime is Node.js",
-      "model": "mistral"
+      "reason": "Since the project requirement does not include a backend, this folder is unnecessary.",
+      "model": "ollama"
+    },
+    {
+      "path": "project_root/backend/runtime/node/framework/fastify",
+      "decision": "PRUNE",
+      "reason": "The project requirement does not include a backend, and the provided folder 'backend/runtime/node/framework/fastify' appears to be related to a backend framework (Fastify). Therefore, it should be pruned.",
+      "model": "ollama"
     },
     {
       "path": "project_root/backend/runtime/django",
       "decision": "PRUNE",
-      "reason": "Condition not satisfied: Backend runtime is Python",
-      "model": "mistral"
+      "reason": "This folder is not relevant for a frontend project built with React, Vite, Tailwind CSS and no backend.",
+      "model": "ollama"
     },
     {
-      "path": "project_root/deployment/docker",
+      "path": "project_root/deployment/docker/docker_files",
       "decision": "PRUNE",
-      "reason": "Condition not satisfied: Deployment uses Docker",
-      "model": "mistral"
+      "reason": "This folder is not relevant for a frontend-only project without a backend, as it contains Docker configuration files which are typically used for backend applications.",
+      "model": "ollama"
     },
     {
       "path": "project_root/deployment/serverless",
       "decision": "PRUNE",
-      "reason": "Condition not satisfied: Deployment is serverless",
-      "model": "mistral"
+      "reason": "This folder is not necessary for a Spotify-like frontend built with React, Vite, Tailwind CSS and React Context as per the project requirements. Since no backend is involved in this project, there is no need for serverless deployment.",
+      "model": "ollama"
     }
   ]
 }
